[gd_scene load_steps=5 format=2]

[ext_resource path="res://nick/laser.gd" type="Script" id=1]
[ext_resource path="res://nick/sprites/laser.png" type="Texture" id=2]
[ext_resource path="res://sounds/laser_bullet_impact.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.88889, 2.74999 )

[node name="Laser" type="Area2D"]
rotation = -6.28319
scale = Vector2( 3, 1 )
collision_layer = 256
collision_mask = 256
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["instanced"]]
position = Vector2( 3, -0.499984 )
rotation = 4.85064e-12
scale = Vector2( 3, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.5 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="BreakSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="area_entered" from="." to="." method="_on_Needle_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Needle_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="finished" from="BreakSound" to="." method="_on_BreakSound_finished"]
